# ownership_nft

./: .gitignore  Anchor.toml  Cargo.toml  Use Token Extensions in onchain programs _ Solana.mhtml  admin-keypair.json  package-lock.json  package.json  pnpm-lock.yaml
docs/: contract_dependencies.md
programs/owhership_nft/: Cargo.toml
programs/owhership_nft/src/: lib.rs
solana/: buffer-owhership_nft-deploy-keypair.json  id.json
tests/: owhership_nft.spec.ts
