[package]
name = "owhership_nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "owhership_nft"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"]}
anchor-spl = { version = "0.31.0", features = ["token", "token_2022", "metadata"] }
spl-token = { version = "=8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "=5.1.0" }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
hex = "0.4"
